ext/date/lib/timelib.h
@@ -30,9 +30,9 @@
 # include "timelib_config.h"
 #endif
 
-#define TIMELIB_VERSION 202106
-#define TIMELIB_EXTENDED_VERSION 20210601
-#define TIMELIB_ASCII_VERSION "2021.06"
+#define TIMELIB_VERSION 202107
+#define TIMELIB_EXTENDED_VERSION 20210701
+#define TIMELIB_ASCII_VERSION "2021.07"
 
 #include <stdlib.h>
 #include <stdbool.h>
@@ -179,6 +179,12 @@ typedef struct _timelib_posix_str
 	int type_index_std_type;  // index into tz->type
 	int type_index_dst_type;  // index into tz->type
 } timelib_posix_str;
+
+typedef struct _timelib_posix_transitions {
+	size_t      count;
+	timelib_sll times[6];
+	timelib_sll types[6];
+} timelib_posix_transitions;
 
 typedef struct _timelib_tzinfo
 {
@@ -1045,6 +1051,12 @@ timelib_time *timelib_sub_wall(timelib_time *t, timelib_rel_time *interval);
 void timelib_posix_str_dtor(timelib_posix_str *ps);
 
 timelib_posix_str* timelib_parse_posix_str(const char *posix);
+
+/**
+ * Calculate the two yearly to/from DST
+ */
+void timelib_get_transitions_for_year(timelib_tzinfo *tz, timelib_sll year, timelib_posix_transitions *transitions);
+
 
 #ifdef __cplusplus
 } /* extern "C" */
